[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/LooseScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/bg.png" type="Texture" id=2]

[node name="Loose screen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 413.199, 149.159 )
scale = Vector2( 1.80703, 1.29133 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -25.0
margin_right = 24.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 69.0
margin_bottom = 14.0
text = "You Loose!"

[node name="Control" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 69.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer/Control"]
margin_right = 38.0
margin_bottom = 14.0
text = "Level:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="VBoxContainer/Control"]
margin_left = 42.0
margin_right = 42.0
margin_bottom = 14.0

[node name="Control2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 69.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="VBoxContainer/Control2"]
margin_right = 36.0
margin_bottom = 14.0
text = "Time:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="VBoxContainer/Control2"]
margin_left = 40.0
margin_right = 40.0
margin_bottom = 14.0

[node name="Control3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 69.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="VBoxContainer/Control3"]
margin_right = 44.0
margin_bottom = 14.0
text = "Points:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsLabel" type="Label" parent="VBoxContainer/Control3"]
margin_left = 48.0
margin_right = 48.0
margin_bottom = 14.0
